mvp/centrifugo.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: centrifugo
  namespace: mvp
  labels:
    app: centrifugo

spec:
  replicas: 1
  selector:
    matchLabels:
      app: centrifugo

  template:
    metadata:
      labels:
        app: centrifugo

    spec:
      containers:
        - image: centrifugo/centrifugo:latest
          imagePullPolicy: Always
          name: centrifugo
          command: [ 'centrifugo' ]
          args: [ '-c', 'config.yaml' ]
          ports:
            - containerPort: 8000

          volumeMounts:
            - mountPath: /centrifugo/config.yaml
              name: config
              subPath: config.yaml

      volumes:
        - name: config
          configMap:
            name: centrifugo-config

---
apiVersion: v1
kind: Service
metadata:

  name: centrifugo
  namespace: mvp

  labels:
    app: centrifugo

spec:
  ports:
    - port: 80
      targetPort: 8000

  selector:
    app: centrifugo
  type: ClusterIP
