mvp/ingress-argo.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:

    kubernetes.io/ingress.class: gce
    ingress.gcp.kubernetes.io/pre-shared-cert: cd
    kubernetes.io/ingress.global-static-ip-name: cd-maap


spec:
  backend:
    serviceName: argocd-server
    servicePort: 80
  rules:
    - host: cd.fobos.app
      http:
        paths:
          - path: /*
            backend:
              serviceName: argocd-server
              servicePort: 80
