mvp/ingress-mvp.yml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: mvp
  namespace: mvp
  annotations:
    kubernetes.io/ingress.class: gce
    ingress.gcp.kubernetes.io/pre-shared-cert: maap-fbs
    kubernetes.io/ingress.global-static-ip-name: maap-fbs

spec:
  backend:
    serviceName: broadcasts
    servicePort: 80
  rules:
    - host: fobos.app
      http:
        paths:
          - path: /
              backend:
                serviceName: centrifugo
                servicePort: 80

          - path: /broadcasts
            backend:
              serviceName: broadcasts
              servicePort: 80
